changed the signup process

--- a/users/templates/users/forgot_password.html
+++ b/users/templates/users/forgot_password.html
@@ -1,11 +1,11 @@
 {% extends 'users/base.html' %}
 {% block content %}
 <p>Hey {{ user }}, </p>
-<p> You forgot your password? no worries, here is your temporary password:
+<p> Looks like you forgot your password! No worries, here is your temporary password:
 </p>
 <p>{{ password }}</p>
-<p>You can reset your password when you login into Memoryze,</p>
+<p>Don't forget to reset your password when you login on Memoryze.</p>
 
-<p>Cheers, <br />The Memoryze Team.</p>
+<p>Cheers, <br />Mable Memoryze Team.</p>
 <p class='last-paragraph' style="font-size:12px;"> Didn't issue this request? <a href="mailto:teammemoryze@gmail.com">contact the support team.</a></p>
 {% endblock %}
